# PCSC2017_Group2

./: AbstractIntegrator.cpp  AbstractIntegrator.h  CMakeLists.txt  Monte Carlo.docx  MonteCarlo_MetropolisAlgorithm.cpp  MonteCarlo_MetropolisAlgorithm.h  MonteCarlo_UniformSampling.cpp  MonteCarlo_UniformSampling.h  README.md  constants.h  fx.cpp  fx.h  main.cpp
Doxygen files/html/: _abstract_integrator_8cpp.html  _abstract_integrator_8cpp__incl.dot  _abstract_integrator_8cpp__incl.map  _abstract_integrator_8cpp__incl.md5  _abstract_integrator_8cpp_source.html  _abstract_integrator_8h.html  _abstract_integrator_8h__dep__incl.map  _abstract_integrator_8h__dep__incl.md5  _abstract_integrator_8h_source.html  _monte_carlo___metropolis_algorithm_8cpp.html  _monte_carlo___metropolis_algorithm_8cpp__incl.dot  _monte_carlo___metropolis_algorithm_8cpp__incl.map  _monte_carlo___metropolis_algorithm_8cpp__incl.md5  _monte_carlo___metropolis_algorithm_8cpp_source.html  _monte_carlo___metropolis_algorithm_8h.html  _monte_carlo___metropolis_algorithm_8h__dep__incl.map  _monte_carlo___metropolis_algorithm_8h__dep__incl.md5  _monte_carlo___metropolis_algorithm_8h__incl.map  _monte_carlo___metropolis_algorithm_8h__incl.md5  _monte_carlo___metropolis_algorithm_8h_source.html  _monte_carlo___uniform_sampling_8cpp.html  _monte_carlo___uniform_sampling_8cpp__incl.dot  _monte_carlo___uniform_sampling_8cpp__incl.map  _monte_carlo___uniform_sampling_8cpp__incl.md5  _monte_carlo___uniform_sampling_8cpp_source.html  _monte_carlo___uniform_sampling_8h.html  _monte_carlo___uniform_sampling_8h__dep__incl.map  _monte_carlo___uniform_sampling_8h__dep__incl.md5  _monte_carlo___uniform_sampling_8h__incl.map  _monte_carlo___uniform_sampling_8h__incl.md5  _monte_carlo___uniform_sampling_8h_source.html  (+38 more)
tests/: CMakeLists.txt  CentralLimitTheory.cpp  CentralLimitTheory.h  Errors.cpp  Errors.h  StatisticalMoments.cpp  StatisticalMoments.h  Test.cpp
(+156 files in other folders)
